--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     margin: auto;
     height: 250px;
-    /* overflow: scroll; */
+    overflow: scroll;
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
@@ -14,9 +14,17 @@
         height: 300px;
     }
 }
-@media (max-width: 350px) and (max-height: 400px) {
+
+@media (min-width: 500px) and (min-height: 401px) {
     .Burger {
-        width: 250px;
-        height: 300px;
+        width: 450px;
+        height: 400px;
+    }
+}
+
+@media (min-width: 1000px) and (min-height: 700px) {
+    .Burger {
+        width: 700px;
+        height: 600px;
     }
 }
